--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,11 @@
         "algorithm": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
-        "utility": "cpp"
-    }
+        "utility": "cpp",
+        "deque": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "stack": "cpp"
+    },
+    "cmake.configureOnOpen": false
 }
