--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,11 @@
         "fstream": "cpp",
         "iomanip": "cpp",
         "stack": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "__tree": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp"
     },
     "cmake.configureOnOpen": false
 }
